// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/App/actions/getInfoKMDiceChain should getInfoKMDiceChain should create getInfoKMDiceChain action 1`] = `
Object {
  "type": "kmdice/App/KMDICE_CHAIN_GET_INFO",
}
`;

exports[`containers/App/actions/getInfoKMDiceChainSuccess should getInfoKMDiceChainSuccess should create getInfoKMDiceChainSuccess action 1`] = `
Object {
  "payload": Object {
    "blocks": 100,
    "longestchain": 100,
  },
  "type": "kmdice/App/KMDICE_CHAIN_GET_INFO_SUCCESS",
}
`;

exports[`containers/App/actions/login should login should create login action 1`] = `
Object {
  "payload": Object {
    "passphrase": "passphrase",
  },
  "type": "atomicapp/App/LOGIN",
}
`;

exports[`containers/App/actions/logout should logout should create logout action 1`] = `
Object {
  "type": "atomicapp/App/LOGOUT",
}
`;

exports[`containers/App/actions/startKMDiceChain should startKMDiceChain should create startKMDiceChain action 1`] = `
Object {
  "payload": Object {
    "pubkey": null,
  },
  "type": "kmdice/App/KMDICE_CHAIN_START",
}
`;

exports[`containers/App/actions/startKMDiceChain should startKMDiceChain should create startKMDiceChain action with pubkey 1`] = `
Object {
  "payload": Object {
    "pubkey": "pubkey",
  },
  "type": "kmdice/App/KMDICE_CHAIN_START",
}
`;

exports[`containers/App/actions/startKMDiceChainSuccess should startKMDiceChainSuccess should create startKMDiceChainSuccess action 1`] = `
Object {
  "payload": Object {
    "pubkey": null,
  },
  "type": "kmdice/App/KMDICE_CHAIN_START_SUCCESS",
}
`;

exports[`containers/App/actions/startKMDiceChainSuccess should startKMDiceChainSuccess should create startKMDiceChainSuccess action with pubkey 1`] = `
Object {
  "payload": Object {
    "pubkey": "pubkey",
  },
  "type": "kmdice/App/KMDICE_CHAIN_START_SUCCESS",
}
`;

exports[`containers/App/actions/stopKMDiceChain should stopKMDiceChain should create stopKMDiceChain action 1`] = `
Object {
  "type": "kmdice/App/KMDICE_CHAIN_STOP",
}
`;
